# memex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  claude.yml
docs/: IDEAS.md  claude-memory-instructions.md  self-update-routine.md
hooks/: session_end.py  session_start.py  stop.py  user_prompt_submit.py
scripts/: com.memex.dream.plist  run-maintenance.sh
skills/remember/: SKILL.md
src/memex/: __init__.py  authoring.py  cli.py  config.py  distill.py  dream.py  embeddings.py  health.py  index.py  markdown.py  retrieve.py  review.py  store.py
tests/: conftest.py  test_authoring.py  test_config.py  test_distill.py  test_dream.py  test_health.py  test_markdown.py  test_review.py  test_store_retrieve.py
