# Memex — a layered long-term memory store for Claude Code.
#
# This is a standalone uv project, deliberately separate from the host Django
# application's pyproject so the memory tooling never pollutes the app's
# dependency set. Run it with `uv run --project .claude/memex memex ...`.
[project]
name = "memex"
version = "0.1.0"
description = "Hybrid (vector + keyword + graph) long-term memory for Claude Code"
requires-python = ">=3.14"
dependencies = [
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# The local embedding backend. Heavy (onnxruntime + a model download), so it is
# opt-in: `uv sync --project .claude/memex --extra fastembed`. The offline
# `hash` backend needs none of this and is used for tests / CI smoke runs.
fastembed = ["fastembed>=0.4"]

[project.scripts]
memex = "memex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memex"]
